--- a/my-vue3-app/index.html
+++ b/my-vue3-app/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vue 3 Admin Dashboard</title>
-    <meta name="description" content="Modern Vue 3 admin dashboard with TypeScript and Vite" />
+    <title>Vue 3  Dashboard</title>
+    <meta name="description" content="Modern Vue 3  dashboard with TypeScript and Vite" />
   </head>
   <body>
     <div id="app"></div>
